# SawingProject

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
include/: animation_interface.h  application_interface.h  data_generator.h  joystick_interface.h  needle_base_controller.h  object_controller.h  user_interface.h  utils.h  video_recorder.h  world_interface.h
launch/: needle_tissue_simulator.launch  nts.launch
libs/: CMakeLists.txt
libs/animation/: CMakeLists.txt  scene.hpp
libs/animation/include/: indexed_model.h  indexed_surface.h  mesh.h  obj_loader.h  object.h  object_type.hpp  root_directory.h
libs/animation/src/: camera.cpp  imported_surface.cpp  indexed_surface.cpp  mesh.cpp  obj_loader.cpp
libs/needle_tissue_simulator/: CMakeLists.txt  needle_tissue_simulator.h
libs/needle_tissue_simulator/include/: box_structured_mesh.h  collisions_interface.h  cosserat_xpbd.h  extended_pbd.h  force_interface.h  friction_model.h  mesh3D.h  needle_boundary_interface.h  needle_model.h  needle_tissue_interface.h  physics_params.hpp  tetrahedral_meshing.h  tetrahedron_collider.h  tissue_mesh.h  tissue_model.h  utils.h  xpbd_constraints.h
libs/needle_tissue_simulator/src/: box_structured_mesh.cpp  collisions_interface.cpp  cosserat_xpbd.cpp  extended_pbd.cpp  force_interface.cpp  friction_model.cpp  mesh3D.cpp  needle_boundary_interface.cpp  needle_model.cpp  needle_tissue_interface.cpp  needle_tissue_simulator.cpp  tetrahedral_meshing.cpp  tetrahedron_collider.cpp  tissue_mesh.cpp  tissue_model.cpp  utils.cpp  xpbd_constraints.cpp
objects/cadillac/: cadillac.mtl
objects/cadillac/blend/: Cadillac_CT4_V_2022.blend
objects/cadillac/blend/Maps/.vrayThumbs/: Cadillac CT4 V 2022_lambert6_AO.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-2.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-3.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-4.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-5.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-6.EXR  Cadillac CT4 V 2022_lambert6_BaseColor-7.EXR  Cadillac CT4 V 2022_lambert6_BaseColor.EXR  Cadillac CT4 V 2022_lambert6_Metalness.EXR  Cadillac CT4 V 2022_lambert6_Normal.EXR  Cadillac CT4 V 2022_lambert6_Roughness.EXR  Cadillac CT4 V 2022_lambert6_Specular.EXR
objects/checker_floor/: checker_floor.mtl
objects/frame/: frame.mtl
objects/marble/: marble.mtl
objects/wood/: wood.mtl
share/: experiments_info.json
src/: animation_interface.cpp  application_interface.cpp  data_generator.cpp  joystick_interface.cpp  needle_base_controller.cpp  object_controller.cpp  user_interface.cpp  utils.cpp  video_recorder.cpp  world_interface.cpp
